<resources>
    <string name="app_name">Uangku</string>

    <string name="check_your_internet_connection">Check your internet connection!</string>
    <string name="something_wrong">Something wrong!</string>
    <string name="do_you_have_regular_income">Do you have routine Income?</string>
    <string name="input_your_regular_income_in_rupiah">Input your routine income in Rupiah</string>
    <string name="auto_input">Auto Input</string>
    <string name="helper_regular_income">eg. your salary, donation, etc</string>
    <string name="choose_date">Choose Date</string>
    <string name="fill_your_regular_income_name">Fill your routine income name</string>
    <string name="you_can_fill_this_in_another_time">You can fill this in another time</string>
    <string name="input_your_regular_expenses">input your regular expenses</string>
    <string name="input_your_expenses">input your expenses</string>
    <string name="input_the_name_of_your_regular_expenses">Input the name of your regular expenses</string>
    <string name="input_the_name_of_your_expenses">Input the name of your expenses</string>
    <string name="helper_regular_expense">eg. your monthly bill, etc</string>
    <string name="do_you_have_regular_expense">Do you have regular expenses?</string>
    <string name="do_you_have_regular_saving">Do you have regular savings</string>
    <string name="input_the_name_of_your_regular_savings">Input the name of yout regular savings</string>
    <string name="helper_regular_saving">Savings will reduce your balance</string>
    <string name="input_your_regular_savings">Input your regular savings</string>
    <string name="finish">Finish</string>
    <string name="error_minimum_password">Password must be more than 6 characters</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="must_be_filled">Must be Filled</string>
    <string name="choose_day">choose day</string>
    <string name="every_month">Every Month</string>
    <string name="date_day">Day</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_expense">Add Expense</string>
    <string name="your_balance">Your Balance</string>
    <string name="input_the_name_of_your_income">Input the name of your income</string>
    <string name="input_your_regular_income">Input your regular income</string>
    <string name="add_income">Add Income</string>
    <string name="title_home">Home</string>
    <string name="detail">Detail</string>
    <string name="history">History</string>
    <string name="your_balance_in">Your balance in</string>
    <string name="crash_today"># Today</string>
    <string name="total_expense">Total Expense</string>
    <string name="total_income">Total Income</string>
    <string name="see_more">See More</string>
    <string name="crash_this_month"># This Month</string>
    <string name="ok">Ok</string>
    <string name="attention">Attention</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="regular_transaction">Regular Transaction</string>
    <string name="tagline">Catatan Keunagan Sehari-Hari</string>
</resources>