<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fghilmany.uangku.ui.dashboard.home.list.ListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.fghilmany.uangku.ui.dashboard.home.detail.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.fghilmany.uangku.ui.dashboard.home.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
</navigation>