<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.fghilmany.uangku.ui.custom.CustomTextView
        android:id="@+id/label_today_expense"
        style="@style/PrimaryNormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/expenses"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_today_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:itemCount="4"
        app:layout_constraintTop_toBottomOf="@id/label_today_expense"
        tools:listitem="@layout/item_detail" />

    <com.fghilmany.uangku.ui.custom.CustomTextView
        style="@style/PrimaryNormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total_expense"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/rv_today_expense"
        app:layout_constraintEnd_toStartOf="@id/gd_expense"/>

    <com.fghilmany.uangku.ui.custom.CustomTextView
        android:id="@+id/tv_expense_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rv_today_expense"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/gd_expense"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="textEnd"
        tools:text="Rp.2000.000.000"
        style="@style/PrimaryNormalText"/>

    <com.fghilmany.uangku.ui.custom.CustomTextView
        android:id="@+id/label_today_income"
        style="@style/PrimaryNormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/income"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_expense_amount" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_today_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:itemCount="4"
        app:layout_constraintTop_toBottomOf="@id/label_today_income"
        tools:listitem="@layout/item_detail" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <com.fghilmany.uangku.ui.custom.CustomTextView
        style="@style/PrimaryNormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total_income"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/rv_today_income"
        app:layout_constraintEnd_toStartOf="@id/gd_income"/>

    <com.fghilmany.uangku.ui.custom.CustomTextView
        android:id="@+id/tv_income_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rv_today_income"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/gd_income"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="textEnd"
        tools:text="Rp.2000.000.000"
        style="@style/PrimaryNormalText"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>