<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.home.detail.DetailFragment"
    android:paddingTop="16sp">

    <com.fghilmany.uangku.ui.custom.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_balance"
        android:id="@+id/label_your_balance_in"
        style="@style/PrimaryNormalText"
        android:textSize="16sp"/>

    <com.fghilmany.uangku.ui.custom.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Rp2000.000.000"
        android:id="@+id/tv_balance"
        style="@style/PrimaryNormalText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_your_balance_in"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="label_your_balance_in, tv_balance"
        app:flow_wrapMode="chain"
        app:flow_horizontalGap="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flow_balance"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_detail_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="4dp"
                app:cardCornerRadius="10dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <com.fghilmany.uangku.ui.custom.CustomTextView
                        android:id="@+id/label_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crash_today"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <include
                        android:id="@+id/layout_today"
                        layout="@layout/layout_list_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/label_today" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_detail_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:elevation="4dp"
                app:cardCornerRadius="10dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/cv_detail_today">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <com.fghilmany.uangku.ui.custom.CustomTextView
                        android:id="@+id/label_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crash_this_month"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <include
                        android:id="@+id/layout_month"
                        layout="@layout/layout_list_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/label_month" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.fghilmany.uangku.ui.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_see_more"
                android:text="@string/see_more"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintTop_toBottomOf="@id/cv_detail_month"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>